[tool.poetry]
name = "repl_python3_Syl-Robot"
version = "0.1.0"
description = ""
authors = ["MatthewVanek <<>>"]

[tool.poetry.dependencies]
python = "^3.8"
evdev = "^1.4.0"
adafruit-circuitpython-motorkit = "^1.6.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
